PR 51192 David Binderman: fix wrong logic (probably)

XXX: this file should probably just be deleted